--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -1,15 +1,15 @@
 \thesischapter{Background: The European Rail Traffic Management System}
 \label{chapter:ERTMS}
 
-Following the successful use of the solid state interlocking for over 30 years Railway Engineers are trying to employ modern technologies such as GPS and mobile data communications in the form of GSM radio to gain a much finer control than the tradition discrete solid state interlocking and their boolean track circuits would allow. This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the tradition discrete control systems of the railway with continuous systems. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the tradition interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. The Trains are free to move along the lengths of track granted to them in the form of a MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of behaviour that allow for different stages of delivery. In the most advanced level 3 all trains must be equipped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via trackside balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however an interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system.
+Following the successful use of the solid state interlocking for over 30 years Railway Engineers are trying to employ modern technologies such as GPS and mobile data communications in the form of GSM radio to gain a much finer control than the traditional discrete solid state interlocking than their boolean track circuits alone would allow. This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the traditional discrete control systems of the railway with continuous systems. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the traditional interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). In this system every train has a movement authority which allocates it a length of track within which it can move. The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. The trains are free to move along the lengths of track granted to them in the form of a MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of behaviour (See \ref{sec:theertms}.) that allow for different stages of delivery. In the most advanced level 3 all trains must be equipped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via trackside balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however an interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system.
 
 
 \section{The European Rail Traffic Management System}
-
+\label{sec:theertms}
 \subsection*{ERTMS levels}
-ERTMS is seperated into different levels of implementation. These range from being a compliment to traditional signalling to a complete replacement for it. Currently both level 1 and 2 have been implemented in different parts of the world and level 3 is still in the conceptual phase and has yet to be implemented anywhere.
+ERTMS is seperated into different levels of implementation. These range from being a compliment to traditional signalling to a complete replacement for it. Currently both, level 1 and 2, have been implemented in different parts of the world and level 3 is still in the conceptual phase and has yet to be implemented anywhere.
 
-\textbf{ERTMS Level 1:} (Figure \ref{fig:ERTMSLevel1}) Movement authorites are calucated based on the underlying signalling system and then transmitted from the trackside to the train through the use of an electronic beacon called a Eurobalise.  The Eurobalise also enable train detection at the trackside and pass relevant information regarding train movement via the landside equipment unit (LEU) to the interlocking and signalling centre. While this level makes use of an interlocking,  it does not make use of a radio block controller unlike later levels of ERTMS.  \\
+\textbf{ERTMS Level 1:} (Figure \ref{fig:ERTMSLevel1}) Movement authorites are calculated based on the underlying signalling system and then transmitted from the trackside to the train through the use of an electronic beacon called an Eurobalise.  The Eurobalise also enables train detection at the trackside and passes relevant information regarding train movement via the landside equipment unit (LEU) to the interlocking and signalling centre. While this level makes use of an interlocking,  it does not make use of a radio block controller unlike later levels of ERTMS.  \\
 
 
 
@@ -115,7 +115,7 @@ ERTMS is seperated into different levels of implementation. These range from bei
 \end{figure}
 \end{center}
 
-\textbf{ERTMS Level 2:}  (Figure \ref{fig:ERTMSLevel2}) This level of ERTMS is an intermediate stage in its deployment as it still contains some of the traditional discrete railway control systems. All implementations of ERTMS level 2 still make use of track circuits for the detection of trains. The traditional coloured light track side signals are optional in this level of implementation. They allow for non ERTMS trains to stil run on the length of track but can be removed if no such trains are running. Movement authorities are calucated based on the blocks contained in the underlying signalling system by the radio block processor which is located in the radio block centre. Data is continously transmitted via radio between the radio block centre and the train in both directions. Movement authorities are transmitted to the train and the train gives its location relative to a given balise This transmission is complemented by on the spot transmission between the track side balise and the train. These track side balise act as both a beacon and a point of reference enabling the train to determine its location along the track. Train detection is also performed at the trackside using track circuits and axle counters, however these determine whether a segment of track is occupied for the purpose of route setting, rather than the exact location of the train. \
+\textbf{ERTMS Level 2:}  (Figure \ref{fig:ERTMSLevel2}) This level of ERTMS is an intermediate stage in its deployment as it still contains some of the traditional discrete railway control systems. All implementations of ERTMS level 2 still make use of track circuits for the detection of trains. The traditional coloured light track side signals are optional in this level of implementation. They allow for non ERTMS trains to still run on the  track but coloured light signals can be removed if no such trains are running. Movement authorities are calculated based on the blocks contained in the underlying signalling system by the radio block processor which is located in the radio block centre. Data is continuously transmitted via radio between the radio block centre and the train in both directions. Movement authorities are transmitted to the train, which in return provides its location relative to a given balise. This transmission is complemented by on-the-spot transmission between the track side balise and the train. These track side balise act as both a beacon and a point of reference enabling the train to determine its location along the track. Train detection is also performed at the trackside using track circuits and axle counters, however these determine whether a segment of track is occupied for the purpose of route setting, rather than the exact location of the train. \
 
 
 
@@ -229,7 +229,7 @@ ERTMS is seperated into different levels of implementation. These range from bei
 \end{center}
 
 
-\textbf{ERTMS Level 3:}  (Figure \ref{fig:ERTMSLevel3})  Instead of using the block system based on track circuits from previous levels, the train itself is considered a moving block.  Route locking and route releasing are performed by the radio block centre using information gathered from trains. Similarily to ERTMS Level 2 communication takes place via radio between the train and the radio block centre. Integrity checking is performed on board the train as it continously monitors its position along the track.
+\textbf{ERTMS Level 3:}  (Figure \ref{fig:ERTMSLevel3})  Instead of using the block system based on track circuits from previous levels, the train itself is considered a moving block.  Route locking and route releasing are performed by the radio block centre using information gathered from trains. Similarily to ERTMS Level 2 communication takes place via radio between the train and the radio block centre. Integrity checking is performed on board of the train as it continuously monitors its position along the track.
 
 
 
@@ -344,7 +344,7 @@ ERTMS is seperated into different levels of implementation. These range from bei
 
 
 \subsection*{Static Speed Profile}
-Traditionally the speed limit along a segment of track was controlled by a combination of speed limit signs at the side of the tracks. In ERTMS this has been replaced by a \emph{static speed profile} which provides the control system on the train with a maximum speed for a given section of track. Each type of train has its own static speed profile depending what it is capable of, for instance a high speed intercity train will have a different static speed profile from a fully loaded freight train. Proving the trains with a static speed profile increases safety further by making speeding less likely and allows for a finer control of the trains speed increasing the capacity of the line.
+Traditionally the speed limit along a segment of track was controlled by a combination of speed limit signs at the side of the tracks. In ERTMS this has been replaced by a \emph{static speed profile} which provides the control system on the train with a maximum speed for a given section of track. Each type of train has its own static speed profile depending what it is capable of, for instance a high speed intercity train will have a different static speed profile from a fully loaded freight train. Proving the trains with a static speed profile increases safety further by making speeding less likely and allows for a finer control of the train's speed increasing the capacity of the line.
 
 \subsection*{Movement Authority}
 There are two different types of movement authorities used to restrict the movement of a train along a piece of track (See Figure \ref{fig:trackplan}).
@@ -353,11 +353,11 @@ There are two different types of movement authorities used to restrict the movem
 \item[End of Authority (EoA)] is the end of the movement authority for a train on a given piece of track. It is a point which the train can not proceed past along that track.
 
 \item[Limit of Authority (LoA)]
- is a trains maximum allowed velocity (VMax) at a position on a piece of track and is calculated using breaking curves.
+ is a train's maximum allowed velocity (VMax) at a position on a piece of track and is calculated using breaking curves.
 
 \end{description}
 
-The on board control system will automatically apply the brakes if the train exceeds either type of movement authority.
+The on-board control system will automatically apply the brakes if the train exceeds either type of movement authority.
 
 
 
@@ -531,9 +531,9 @@ Train 2
 
 \subsection*{An Informal Description of the Combined System}
 In the following we will present a high level description of the combined interlocking and radio block processor system.
-The aim of specifying a combined system is to get rid of the inconsistencies and problems caused by the interface between the RBC and interlocking. A prime example of such an inconsistency occurs when a high speed ERTMS enabled train travels along a line, under the guidence of a movment authority it is possible for the train to travel through an ordinary red light.  
+The aim of specifying a combined system is to get rid of the inconsistencies and problems caused by the interface between the RBC and interlocking.  These are two seperate control systems each with its method of communicating instructions to the train. The interlocking acts a small safety kernel in the traditional train control system which should also be the case in the combined system, it must have the final say on any instruction to the trains or railtrack. If this is not the case then we may end up in a situation where a train is in a safe position according to one system but not the other. A prime example of such an inconsistency occurs when a high speed ERTMS enabled train travels along a line, under the guidance of a movment authority and is allowed to travel through an ordinary red light.  
 
- The components of the system which we are trying to capture can be found inside the dotted line in figure \ref{fig:ERTMSCombine}. These consist of the interlocking and radio block processor. Currently the interface between them is biased in one direction, most of the information travels from the interlocking locking to the radio block processor. Some information does go in the other direction for example the radio block centre will notify the interlocking when a ERTMS enabled train is travelling along the line.  However other possibilities for a partition exist in a combined system exist, for example the route setting and releasing could take place in the radio block centre. There is also different possibilities from the level of partitioning/ integration of the system, it could be the case that a fully integrated system is much simplier however such a system would have to be constructed from scratch. 
+ The components of the system which we are trying to capture can be found inside the dotted line in figure \ref{fig:ERTMSCombine}. These consist of the interlocking and radio block processor. Currently the interface between them is biased in one direction, most of the information travels from the interlocking to the radio block processor. Some information does go in the other direction; for example the radio block centre will notify the interlocking when a ERTMS enabled train is travelling along the line.  However, other possibilities for a partition in a combined system exist, for example the route setting and releasing could take place in the radio block centre. There are also different possibilities from the level of partitioning/ integration of the system, it could be the case that a fully integrated system is much simplier, however such a system would have to be constructed from scratch. 
 
 
 
