--- a/Introduction.tex
+++ b/Introduction.tex
@@ -3,7 +3,7 @@
 
 \section{Introduction}
 
-This thesis is concerned with the application of formal methods within the Railway Domain. Firstly we present a new approach to develop verified SAT solving algorithms and which have been applied the verification of a real world train control system: the solid state interlocking. Secondly we present an approach to formalise the European Rail Traffic Management System (ERTMS) and apply a model checker to verify the systems safety.
+This thesis is concerned with the application of formal methods within the Railway Domain. Firstly we present a new approach to develop verified SAT solving algorithms and which have been applied the verification of a real world train control system: the solid state interlocking. Secondly we present an approach to formalise and model the European Rail Traffic Management System (ERTMS) and apply a model checker to verify the systems safety.
 
 A major problem facing those who design and develop computer systems today is  that of designing and implementing such systems correctly.The answer to this question is more elusive than it may seem initially. The process of checking that a system meets its specification is called \emph{verification}. In industry the most widely used means to verify both hardware and software systems is testing. This checks that for a given input the output of the system is correct with regards to the specification. The biggest downfall of testing is that it is typically used in a \emph{non-exhaustive} manor, due to the fact that most modern systems have a large number of inputs and testing each possible combination is not feasible.
 
@@ -42,7 +42,7 @@ Our second set of aims is in regard to the formal specification and verification
 
 \item Formalise ERTMS as a hybrid automata.
 
-\item Formalise ERTMS as a Real Time Maude specification.
+\item Formalise and Model ERTMS as a Real Time Maude specification.
 
 \item Verify ERTMS using Real Time Maude's linear temporal logic model checker.
 
