--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -145,7 +145,7 @@ $$K,\pi \models_{LTL} \phi \vee \psi \leftrightarrow K,\pi \models_{LTL} \phi \ 
 where $succ$ is a successor function $succ: \mathbb{N} \_ \to \mathbb{N}$ such that $succ;\pi(n) = \pi(succ(n)) = \pi(n + 1)$.
 
 \end{mydef}
-There are equivalences between the following formulas containing $\textbf{G}$ and $\textbf{R}$ and formulas containing $\mathbf{F}$ and \mathbf{U}.
+There are equivalences between the following formulas containing $\textbf{G}$ and $\textbf{R}$ and formulas containing $\mathbf{F}$ and $\mathbf{U}$.
 
 $$\textbf{G} \phi \equiv False \, \mathbf{R} \, \phi $$
 $$\textbf{F} \phi \equiv   True \, \mathbf{U} \, \phi$$
