--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -628,7 +628,7 @@ As part of this project we will also have to formalise new safety properties for
 
 \item A point should not move if it is in a movement authority
 
-\item Two trains should not have over lapping movement authorities
+\item Two trains should not have over-lapping movement authorities
 
 \end{itemize}
 
