added ariane rocket reference and description.

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -16,7 +16,7 @@ petition (www.smtcomp.org) many systems were not total in the sense that they re
 
 The Railway Verification Group at the Computer Science Department of Swansea University has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively uncomplex and every interlocking developed has to comply to the same range of safety requirements.  We have developed a Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System. This developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desireable to understand possible behaviours and to ensure safe integration with existing infrastructure.
 
-\textbf{I should write about some famous examples of systems development gone wrong i.e. ariane rocket, chip and pin. I should also include some reference to the software crisis of the 60s.} 
+\textbf{I should write about some famous examples of systems development gone wrong i.e. ariane rocket, chip and pin. I should also include some reference to the software crisis of the 60s.} \cite{GL97}
 
 One 
 
