--- a/lit.bib
+++ b/lit.bib
@@ -912,6 +912,19 @@
   journal = {In preparation}
 }
 
+@INPROCEEDINGS{GL97,
+  author = {Le Lann, G.},
+  title = {An analysis of the {A}riane 5 flight 501 failure-a system engineering
+	perspective},
+  booktitle = {Engineering of Computer-Based Systems, 1997. Proceedings., International
+	Conference and Workshop on},
+  year = {1997},
+  pages = {339--346},
+  publisher = {IEEE Computer Society},
+  owner = {andylawrence},
+  timestamp = {2014.04.03}
+}
+
 @INPROCEEDINGS{SL08,
   author = {Lescuyer, S. and Conchon, S.},
   title = {{A {R}eflexive {F}ormalization of a {SAT} {S}olver in {C}oq}},
@@ -1475,10 +1488,5 @@
 
 @MISC{Scade,
   note = {Scade, http://www.esterel-technologies.com}
-}
-
-@INPROCEEDINGS{,
-  owner = {andylawrence},
-  timestamp = {2014.04.03}
 }
 
