added chip and pin example to intro

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -7,6 +7,9 @@ This thesis is concerned with the application of formal methods within the Railw
 
 A major problem facing those who design and develop computer systems today is  that of designing and implementing such systems correctly. The answer to this question is more elusive than it may seem initially. The process of checking that a system meets its specification is called \emph{verification}. In industry the most widely used means to verify both hardware and software systems is testing. This checks that for a given input the output of the system is correct with regards to the specification. The biggest downfall of testing is that it is typically used in a \emph{non-exhaustive} manor, due to the fact that most modern systems have a large number of inputs and testing each possible combination is not feasible. This problem is further compounded when several systems are operating in paralell and communicating with each other.
 
+One of the most famous and costly errors to ocurr was that of the Ariane 5 flight 501\cite{GL97}. A 64-bit floating point number representing horizontal velocity was converted into an 16-bit signed integer resulting in an overflow and a hardware exception being raised. The control system interpreted the hardware exception as position and velocity data which lead it to fly on a self destructive trajectory. Another example of a flawed computer system is "Chip and PIN" smart cards secured by the EMV protocol \cite{JM10}. It is supposed to be the case that only someone with the 4 digit personal identification number (PIN) can make payments with the cards, however it is possible for a fraudster to perform a man-in-the-middle attack and to trick the terminal into believing the PIN was correctly entered when no PIN was entered at all. With over 730 million smart cards in circulation this posses a significant threat the to security of many peoples finances. Both of these problems were avoidable. In the case of the Ariane rocket all that would have been required was an extra line of code or two to prevent the variable over-flowing. Many other variables in the code had been protected against over-flow in this way, it was simply over looked in the case of this particular variable.
+
+
 Formal methods are a group of approaches that capture certain aspects of the development process with a logical and mathematical basis. This thesis is mostly concerned with \emph{formal verification}, which uses logic and formal reasoning to prove that a program meets its specification, and formal specification which attempts to capture the behaviour of the program in a logic or language with a logical underpinning. The advantage of using formal verification in combination with formal specification is that one can prove that a system satisfies its specification for all inputs in an \emph{exhaustive} manor. These formal methods however do not make testing redundant, for example, would you rather fly a plane that has been formally verified and never tested or a plane that has been heavily tested but not verified. Another problem is that manual formal verification requires a large amount of technical ability to perform and is time . There are a number of automatic verification techniques, however these are typically not complete. One area that automatic techniques do perform well in is that of verifying large but logically uncomplex systems, which do occur in industry. It is also beneficial if these systems are part of a product line, then a single methodology may be developed to verify all of the systems. 
 
 One such automatic verification technique is SAT based model checking which attempts to exhaustively search the state space of the system and check that a safety property holds in each individual state. This is done by formulating the model checking problem as a boolean satisfaction problem and then applying SAT solver to do the search. These SAT solvers have the advantage that they are highly optimised and are typically faster at solving any boolean satisfaction problem, off the shelf, than any proprietary software. The low level and complex nature of many SAT solver optimisations also makes it harder to reason about the solvers correctness. This causes a probem when such solvers are used in a safety critical environment where their results must be trustworthy. Besides the correctness also
@@ -16,9 +19,8 @@ petition (www.smtcomp.org) many systems were not total in the sense that they re
 
 The Railway Verification Group at the Computer Science Department of Swansea University has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively uncomplex and every interlocking developed has to comply to the same range of safety requirements.  We have developed a Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System. This developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desireable to understand possible behaviours and to ensure safe integration with existing infrastructure.
 
-\textbf{I should write about some famous examples of systems development gone wrong i.e. ariane rocket, chip and pin. I should also include some reference to the software crisis of the 60s.} \cite{GL97}
 
-One 
+
 
 
 \section{Aim}
