--- a/lit.bib
+++ b/lit.bib
@@ -1124,6 +1124,17 @@
   pages = {337--340}
 }
 
+@INPROCEEDINGS{JM10,
+  author = {Murdoch, S. J. and Drimer, S. and Anderson, R. and Bond, M.},
+  title = {Chip and PIN is Broken},
+  booktitle = {Security and Privacy (SP), 2010 IEEE Symposium on},
+  year = {2010},
+  pages = {433--446},
+  publisher = {IEEE Computer Society},
+  owner = {andylawrence},
+  timestamp = {2014.04.25}
+}
+
 @ARTICLE{TN99,
   author = {Nipkow, T. and Paulson, L. C. and Wenzel, M.},
   title = {Isabelle/{HOL}: {A} {P}roof {A}ssistant for {H}igher-{O}rder {L}ogic},
